--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   build_runner: ^2.3.3
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
