--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   build_runner: ^2.3.3
   url_launcher: ^6.1.9
+  visibility_detector: ^0.3.3
 
 dev_dependencies:
   flutter_test:
