--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   flutter_riverpod: ^2.1.3
   flutter_localizations:
     sdk: flutter
-  build_runner: ^2.3.3
   url_launcher: ^6.1.9
   visibility_detector: ^0.3.3
+  rename: ^2.1.1
 
 dev_dependencies:
   flutter_test:
