--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.1.9
   visibility_detector: ^0.3.3
   rename: ^2.1.1
+  responsive_sizer: ^3.1.1
 
 dev_dependencies:
   flutter_test:
