--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   visibility_detector: ^0.3.3
   rename: ^2.1.1
   responsive_sizer: ^3.1.1
+  firebase_analytics: ^10.1.3
 
 dev_dependencies:
   flutter_test:
