--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   rename: ^2.1.1
   responsive_sizer: ^3.1.1
   firebase_analytics: ^10.1.3
+  animated_floatactionbuttons: ^0.1.0
 
 dev_dependencies:
   flutter_test:
